Cells CSS cleanup + slight fix of cell periods
I don't have any way to show what was broken with cell periods rn, but
I'll show that in the next PR. In short, it seems that the way I've
chosen to make cell periods breaks the margin, because the whole cell of
a cell-period with zero width can be literally anywhere between two
columns. The random margins stack, and the cells become misaligned.

Really annoying. I decided to just find what left: and right: properties
will make it okayish.

But there's another fix. If I set width: 1px to the whole cell-period,
then there's no need to do that. But it's more annoying, because the gap
between columns becomes 5px, not 4px, so two different heatmaps don't
look right when placed near each other.

I just thought up another possible fix: make the parent element the
cell-period-before... But then I'd have to do something about dummy
cells...

I believe that what I've decided to do is maximum visual changes for
minimum effort. I'll leave it at that for now.

--- a/src/styles/_cells.scss
+++ b/src/styles/_cells.scss
@@ -20,22 +20,6 @@ $cell-margin: 2px;
   position: relative;
   background-color: var(--support-background-color);
 
-  &.offset--2:before {
-    left: 0px;
-  }
-
-  &.offset--1:before {
-    left: -50px;
-  }
-
-  &.offset-1:before {
-    left: -145px;
-  }
-
-  &.offset-2:before {
-    left: -190px;
-  }
-
   &:hover {
     border: 1px solid var(--cell-border-color);
   }
@@ -60,6 +44,7 @@ $cell-margin: 2px;
         calc(var(--height) * var(--multiplier) - 1)
     );
     width: calc(16px * var(--width) + 2px * calc(var(--width) - 1));
+    border-radius: 1px;
     position: absolute;
     visibility: visible;
     display: block;
@@ -87,12 +72,12 @@ $cell-margin: 2px;
 
     & .cell-period-before {
       width: 11px;
-      left: -12px;
+      left: -12.3px;
     }
 
     & .cell-period-after {
       width: 11px;
-      right: -12px;
+      right: -12.35px;
     }
   }
 
